Nuevas paginas de admin

--- a/Paginas/progresoObra.html
+++ b/Paginas/progresoObra.html
@@ -1,58 +1,263 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avance de Obra</title>
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <data value="JB-CONSTRUCCIONES"></data>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style>
-</head>
-<body class="bg-gray-50">
-    <!-- Sidebar -->
-        <div class="flex h-screen">
-        <!-- Main content -->
-        <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
-            <div class="mb-6">
-                <div class="flex items-center justify-between">
-                    <h2 class="text-2xl font-semibold text-gray-800">Estado Actual de tu Proyecto</h2>
-                    <button onclick="window.location.href='../index.html'" class="px-4 py-2 bg-yellow-600 text-white rounded-lg text-sm
-                            hover:bg-red-700 transition duration-200 shadow-md hover:scale-105 ease-in-out">Volver al inicio
-                    </button>
-                </div>
-                <p class="text-gray-600 mt-2">Aquí puedes ver el progreso de tu obra.</p>
-            </div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Panel Administrador - Progreso de Obra</title>
+  <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css" />
 
-                
-                <div class="bg-white rounded-lg shadow">
-                    <div class="px-6 py-4 border-b border-gray-200">
-                        <h3 class="text-lg font-medium text-gray-800">Proyecto A</h3>
-                    </div>
-                    <div class="divide-y divide-gray-200">
-                        <div class="px-6 py-4">
-                            <p class="text-gray-600">Estado: En Progreso</p>
-                            <p class="text-gray-600">Última actualización: 20/10/2023</p>
-                            <img src="https://example.com/avance1.jpg" alt="Avance Proyecto A" class="w-full h-48 object-cover mt-2">
-                        </div>
-                        <div class="px-6 py-4">
-                            <p class="text-gray-600">Estado: Finalizado</p>
-                            <p class="text-gray-600">Última actualización: 15/10/2023</p>
-                            <img src="https://example.com/avance2.jpg" alt="Avance Proyecto B" class="w-full h-48 object-cover mt-2">
-                        </div>
-                        <!-- Agregar más avances según sea necesario -->
-                    </div>
-                </div>
-            </main>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to bottom right, #e3e6ff, #f3f4f6);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #222;
+    }
+
+    /* 🔹 Glass Effect */
+    .glass {
+      background: rgba(255, 255, 255, 0.35);
+      backdrop-filter: blur(12px);
+      border: 2px solid rgba(22, 26, 126, 0.25);
+      box-shadow: 0 8px 25px rgba(22, 26, 126, 0.15);
+      border-radius: 1rem;
+    }
+
+    input, select, textarea {
+      background-color: rgba(255, 255, 255, 0.45);
+      border: 1px solid #161a7e;
+      transition: all 0.3s ease;
+    }
+
+    input:focus, select:focus, textarea:focus {
+      background-color: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 0 6px rgba(22, 26, 126, 0.3);
+    }
+
+    .btn {
+      transition: all 0.25s ease-in-out;
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+    }
+
+    @media (max-width: 768px) {
+      iframe { height: 200px !important; }
+    }
+  </style>
+</head>
+
+    <body class="text-gray-800">
+    <header class="w-full bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 flex justify-between items-center">
+    <h1 class="text-2xl font-semibold text-gray-800">Progreso de Obra</h1>
+    <button onclick="window.location.href='../index.html'" 
+            class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition">
+        Inicio
+    </button>
+    </header>
+
+  <!-- 🔹 Contenedor principal -->
+  <main class="glass mt-8 p-6 w-full max-w-[950px]">
+    <h2 class="text-2xl font-semibold text-gray-800 text-center mb-2">Gestión de Avances de Obra</h2>
+    <p class="text-center text-gray-600 mb-6">Desde aquí puedes publicar avances de tus obras, grabados o en vivo.</p>
+
+    <!-- 🧱 Formulario de publicación -->
+    <form id="formVideo" class="flex flex-col gap-6" data-role="admin">
+
+      <!-- Título -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-1">Título del avance</label>
+        <input id="titulo" type="text" placeholder="Ejemplo: Avance de cimientos"
+               class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required>
+      </div>
+
+      <!-- Descripción -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-1">Descripción</label>
+        <textarea id="descripcion" rows="3" placeholder="Describe brevemente el avance..."
+                  class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required></textarea>
+      </div>
+
+      <!-- ID de YouTube + Enlaces -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-1">ID de YouTube</label>
+        <div class="flex flex-col sm:flex-row gap-2">
+          <input id="youtubeID" type="text" placeholder="Ejemplo: OCMaOMj06aA"
+                 class="flex-1 px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]" required>
+
+          <button type="button"
+                  onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/videos/upload','_blank')"
+                  class="px-3 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn">
+            🎬 Canal
+          </button>
+
+          <button type="button"
+                  onclick="window.open('https://studio.youtube.com/channel/UCfj5-JGfOtYcKCD8_nvgn1g/livestreaming','_blank')"
+                  class="px-3 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 btn">
+            🔴 En Vivo
+          </button>
         </div>
-    </div>
-    <script src="../Scripts/main.js"></script>
+        <p class="text-gray-500 text-sm mt-1 text-center sm:text-left">
+          Copia el ID de tu video o inicia una transmisión en vivo.
+        </p>
+      </div>
+
+      <!-- Vista previa -->
+      <div id="previewContainer" class="flex justify-center mt-4"></div>
+
+      <!-- Estado y Tipo -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <label class="block font-medium text-gray-800 mb-1">Estado</label>
+          <select id="estado" class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]">
+            <option value="borrador">Borrador</option>
+            <option value="publicado">Publicado</option>
+          </select>
+        </div>
+        <div>
+          <label class="block font-medium text-gray-800 mb-1">Tipo</label>
+          <select id="tipo" class="w-full px-3 py-2 rounded-lg focus:ring-2 focus:ring-[#161a7e]">
+            <option value="video">Video grabado</option>
+            <option value="vivo">Transmisión en vivo</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Botones -->
+        <div class="flex justify-center gap-6 mt-4">
+        <button type="button"
+                onclick="formVideo.reset(); previewContainer.innerHTML='';"
+                class="w-32 px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500 btn">
+            Limpiar
+        </button>
+
+        <button type="submit"
+                class="w-32 px-4 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457] btn">
+            Publicar
+        </button>
+
+        <button type="button"
+                onclick="window.location.href='../Paginas/gestionProyectos.html';"
+                class="w-32 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 btn">
+            Cancelar
+        </button>
+        </div>
+
+    </form>
+
+    <!-- 🟩 Sección de videos publicados -->
+    <section class="mt-10">
+      <h3 class="text-xl font-semibold mb-4 text-gray-800 border-b border-[#161a7e] pb-2 text-center">
+        Avances Publicados
+      </h3>
+      <div id="videosContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+    </section>
+  </main>
+
+  <script>
+  const form = document.getElementById('formVideo');
+  const preview = document.getElementById('previewContainer');
+  const videosContainer = document.getElementById('videosContainer');
+  const youtubeInput = document.getElementById('youtubeID');
+  const videos = [];
+  let editIndex = null; // Para saber si se está editando un video existente
+
+  // Vista previa en tiempo real del video
+  youtubeInput.addEventListener('input', () => {
+    const id = youtubeInput.value.trim();
+    preview.innerHTML = id
+    ? `<div class="flex justify-center"><iframe class="w-[70%] h-60 rounded-lg" src="https://www.youtube.com/embed/${id}" allowfullscreen></iframe></div>`
+      : '';
+  });
+
+  // Publicar o actualizar video
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+
+    const titulo = document.getElementById('titulo').value.trim();
+    const descripcion = document.getElementById('descripcion').value.trim();
+    const youtubeID = youtubeInput.value.trim();
+    const estado = document.getElementById('estado').value;
+    const tipo = document.getElementById('tipo').value;
+
+    if (!titulo || !youtubeID) return alert("Por favor completa los campos requeridos.");
+
+    if (editIndex !== null) {
+      // 🔹 Actualizar video existente
+      videos[editIndex] = { titulo, descripcion, youtubeID, estado, tipo };
+      editIndex = null;
+    } else {
+      // 🔹 Agregar nuevo video
+      videos.push({ titulo, descripcion, youtubeID, estado, tipo });
+    }
+
+    renderVideos();
+    form.reset();
+    preview.innerHTML = '';
+  });
+
+  // Renderizar tarjetas
+  function renderVideos() {
+    videosContainer.innerHTML = '';
+    videos.forEach((v, index) => {
+      const live = v.tipo === 'vivo'
+        ? '<span class="bg-red-600 text-white text-xs px-2 py-1 rounded-md ml-2">EN VIVO 🔴</span>'
+        : '';
+
+      videosContainer.innerHTML += `
+        <div class="bg-white/60 backdrop-blur-md rounded-lg shadow-md overflow-hidden hover:shadow-lg transition transform hover:-translate-y-1">
+          <iframe class="w-full h-48" src="https://www.youtube.com/embed/${v.youtubeID}" allowfullscreen></iframe>
+          <div class="p-4">
+            <h3 class="text-lg font-semibold text-gray-800">${v.titulo} ${live}</h3>
+            <p class="text-gray-600 text-sm">${v.descripcion}</p>
+            <p class="text-gray-500 text-xs mt-1">Estado: ${v.estado}</p>
+
+            <!-- Botones de acción -->
+            <div class="flex justify-center gap-3 mt-3">
+              <button onclick="editVideo(${index})"
+                class="px-3 py-1 bg-yellow-500 text-white text-sm rounded-lg hover:bg-yellow-600 transition">✏️ Editar</button>
+              <button onclick="deleteVideo(${index})"
+                class="px-3 py-1 bg-red-600 text-white text-sm rounded-lg hover:bg-red-700 transition">🗑️ Eliminar</button>
+            </div>
+          </div>
+        </div>
+      `;
+    });
+  }
+
+  // Función: Eliminar video
+  function deleteVideo(index) {
+    if (confirm("¿Seguro que deseas eliminar este video?")) {
+      videos.splice(index, 1);
+      renderVideos();
+    }
+  }
+
+  // Función: Editar video
+  function editVideo(index) {
+    const v = videos[index];
+    document.getElementById('titulo').value = v.titulo;
+    document.getElementById('descripcion').value = v.descripcion;
+    document.getElementById('youtubeID').value = v.youtubeID;
+    document.getElementById('estado').value = v.estado;
+    document.getElementById('tipo').value = v.tipo;
+    editIndex = index;
+
+    // Mostrar vista previa
+    preview.innerHTML = `<div class="flex justify-center"><iframe class="w-1/2 h-60 rounded-lg" src="https://www.youtube.com/embed/${v.youtubeID}" allowfullscreen></iframe></div>`;
+
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+</script>
+
 </body>
 </html>
+
+
