--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -1,109 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Proyectos</title>
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <data value="JB-CONSTRUCCIONES"></data>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestión de Proyectos</title>
+  <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(135deg, #e8eaf6 0%, #f4f5f7 100%);
+    }
+  </style>
 </head>
-<body class="bg-gray-50">
-        <body class="bg-gray-50">
-        <div class="flex h-screen">
-        <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden bg-transparent shadow-none">
-            <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
-                <div class="flex items-center justify-between px-6 py-4">
-                    <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
-                    <button class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700"
-                        onclick="window.location.href='nuevoProyecto.html'">
-                        + Nuevo Proyecto
-                    </button>
-                </div>
-            </header>
-            
-            <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
-                <div class="mb-6">
-                    <h2 class="text-2xl font-semibold text-gray-800">Proyectos Activos</h2>
-                    <p class="text-gray-600">Gestión y seguimiento de proyectos en curso</p>
-                    <div class="flex space-x-4 mt-4">
-                        <button class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700">
-                            Actualizar
-                        </button>
-                        <button class="bg-gray-600 text-white px-4 py-2 rounded-md hover:bg-gray-700">
-                            Exportar Listado
-                        </button>
-                    </div>
-                </div>
-                
-                <div class="grid grid-cols-1 gap-6">
-                    <!-- Filtros -->
-                    <div class="bg-white rounded-lg shadow p-4">
-                        <div class="flex flex-wrap gap-4">
-                            <input type="text" placeholder="Buscar proyecto..." class="border rounded-md p-2 flex-1">
-                            <select class="border rounded-md p-2">
-                                <option>Todos los estados</option>
-                                <option>En planificación</option>
-                                <option>En progreso</option>
-                                <option>En pausa</option>
-                                <option>Finalizado</option>
-                            </select>
-                            <select class="border rounded-md p-2">
-                                <option>Todos los clientes</option>
-                                <option>Cliente A</option>
-                                <option>Cliente B</option>
-                            </select>
-                        </div>
-                    </div>
 
-                    <div class="bg-white rounded-lg shadow overflow-hidden">
-                        <div class="grid grid-cols-12 gap-4 p-4 border-b bg-gray-50 font-medium">
-                            <div class="col-span-3">Proyecto</div>
-                            <div class="col-span-2">Cliente</div>
-                            <div class="col-span-2">Fecha Inicio</div>  
-                            <div class="col-span-2">Fecha Fin</div>
-                            <div class="col-span-1">Avance</div>
-                            <div class="col-span-2">Acciones</div>
-                        </div>
-                        <div class="divide-y divide-gray-200">
-                            <div class="grid grid-cols-12 gap-4 p-4 items-center hover:bg-gray-50">
-                                <div class="col-span-3 font-medium">Casa Residencial Las Lomas</div>
-                                <div class="col-span-2">Juan Pérez</div>
-                                <div class="col-span-2">15/09/2023</div>
-                                <div class="col-span-2">15/12/2023</div>
-                                <div class="col-span-1">
-                                    <div class="w-full bg-gray-200 rounded-full h-2.5">
-                                        <div class="bg-green-600 h-2.5 rounded-full" style="width: 65%"></div>
-                                    </div>
-                                    <span class="text-xs">65%</span>
-                                </div>
-                                <div class="col-span-2 flex space-x-2">
-                                    <button title="Editar" class="text-blue-600 hover:text-blue-800">
-                                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/>
-                                        </svg>
-                                    </button>
-                                    <button title="Detalles" class="text-green-600 hover:text-green-800">
-                                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                      </div>    
-                </div>
-            </main>
+<body class="text-gray-800">
+  <div class="flex flex-col min-h-screen bg-transparent">
+    <!-- Encabezado -->
+    <header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm flex justify-between items-center">
+      <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
+      <div class="flex gap-3">
+        <button onclick="window.location.href='../index.html'" class="px-4 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600 transition">Inicio</button>
+        <button onclick="window.location.href='nuevoProyecto.html'" class="px-4 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition">Nuevo Proyecto</button>
+      </div>
+    </header>
+
+    <!-- Contenido principal -->
+    <main class="flex-1 p-2">
+      <div class="border-[3px] border-[#161a7e] rounded-xl bg-white/60 backdrop-blur-md p-2 shadow-md">
+        <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
+          <div>
+            <h2 class="text-2xl font-semibold text-gray-800">Proyectos Activos</h2>
+            <p class="text-gray-600">Gestión y seguimiento de proyectos en curso</p>
+          </div>
+          <div class="flex flex-wrap gap-3 mt-4 md:mt-0 items-center justify-center">
+            <button class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition">Actualizar</button>
+            <button class="px-4 py-2 bg-gray-600 text-white rounded-md hover:bg-gray-700 transition">Exportar</button>
+          </div>
+        </div>
+
+        <!-- Filtros -->
+        <div class="bg-white/70 border border-[#161a7e] rounded-lg p-4 mb-6 backdrop-blur-md">
+          <div class="flex flex-wrap gap-4 justify-evenly">
+            <input type="text" placeholder="Buscar proyecto..." class="flex-1 px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
+            <select class="px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
+              <option>Todos los estados</option>
+              <option>En planificación</option>
+              <option>En progreso</option>
+              <option>En pausa</option>
+              <option>Finalizado</option>
+            </select>
+            <select class="px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
+              <option>Todos los clientes</option>
+              <option>Cliente A</option>
+              <option>Cliente B</option>
+            </select>
+          </div>
+        </div>
+
+    <!-- Tabla de proyectos -->
+    <div class="overflow-x-auto rounded-lg border border-[#161a7e]/30 shadow-md">
+    <div class="min-w-[900px] grid grid-cols-12 gap-4 p-4 bg-[#161a7e]/10 font-medium text-gray-800 border-b">
+        <div class="col-span-3">Nombre del Proyecto</div>
+        <div class="col-span-2">Cliente</div>
+        <div class="col-span-2">Inicio</div>
+        <div class="col-span-2">Final (Aprox)</div>
+        <div class="col-span-1 text-center">Avances</div>
+        <div class="col-span-2 text-center">Acciones</div>
+    </div>
+
+    <div class="divide-y divide-gray-200 bg-white/60 backdrop-blur-md">
+        <div class="min-w-[900px] grid grid-cols-12 gap-4 p-4 items-center hover:bg-white transition-colors duration-200">
+        <div class="col-span-3 font-medium">Casa Residencial Las Lomas</div>
+        <div class="col-span-2">Juan Pérez</div>
+        <div class="col-span-2">15/10/2025</div>
+        <div class="col-span-2">15/12/2026</div>
+        <div class="col-span-1 text-center">5</div> <!-- Cantidad de avances -->
+        <div class="col-span-2 flex justify-center gap-2 flex-wrap">
+            <button title="Editar" class="px-3 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition text-sm">Editar</button>
+            <button title="Avance" onclick="window.location.href='progresoObra.html'" class="px-3 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition text-sm">Evidencias</button>
+        </div>
         </div>
     </div>
-    <script src="../Scripts/main.js"></script>
+    </div>
+
+    </div>
+</main>
+
+  <script src="../Scripts/main.js"></script>
 </body>
 </html>
