--- a/index.html
+++ b/index.html
@@ -89,13 +89,25 @@
     </div>
   </div>
 </header>
+<!-- Navegación pestañas -->
+<nav class="tabs mt-[0.1rem] mb-[0.1rem] text-base md:text-lg flex flex-row sm:gap-1 gap-[0.5px] justify-evenly items-center flex-wrap">
+  <button class="active" data-tab="obra-negra">Obra Negra</button>
+  <button data-tab="obra-blanca">Obra Blanca</button>
+  <button data-tab="mantenimiento">Mantenimiento</button>
 
-  <!-- Navegación pestañas -->
-<nav class="tabs mt-[0.1rem] mb-[0.1rem] text-base md:text-lg flex flex-row sm:gap-1 gap-1 justify-evenly">
-    <button class="active" data-tab="obra-negra">Obra Negra</button>
-    <button data-tab="obra-blanca">Obra Blanca</button>
-    <button data-tab="mantenimiento">Mantenimiento</button>
-  </nav>
+      <!-- Enlace WhatsApp solo ícono -->
+      <a 
+        href="https://wa.me/573007413114?text=Hola%2C%20quiero%20más%20información%20sobre%20sus%20servicios" 
+        target="_blank"
+        class="flex items-center">
+        <img 
+          src="assets/img/whatsapp-fill.svg" 
+          alt="WhatsApp" 
+          class="w-7 h-7 mt-[-0.7rem] transition-transform duration-200 hover:scale-125 hover:brightness-125"
+        />
+      </a>
+    </nav>
+
 
      <main 
       class="flex-1 w-full flex flex-col items-center justify-start overflow-y-auto pl-[0.4rem] pr-[0.4rem] pb-6 rounded-2xl shadow-lg" 
