--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -8,87 +8,196 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
       background: linear-gradient(135deg, #e8eaf6 0%, #f4f5f7 100%);
     }
   </style>
+
 </head>
 
 <body class="text-gray-800">
   <div class="flex flex-col min-h-screen bg-transparent">
-    <!-- Encabezado -->
+
+    <!-- ENCABEZADO -->
     <header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm flex justify-between items-center">
-      <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
+      <h1 class="text-xl font-semibold text-gray-800">Gestión Proyectos</h1>
       <div class="flex gap-3">
-        <button onclick="window.location.href='../index.html'" class="px-4 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600 transition">Inicio</button>
-        <button onclick="window.location.href='nuevoProyecto.html'" class="px-4 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition">Nuevo Proyecto</button>
+        <button 
+          onclick="window.location.href='../index.html'" 
+          class="px-2 py-1 bg-yellow-500 text-white rounded-md hover:bg-yellow-600 transition">
+          Inicio
+        </button>
+        <button 
+          onclick="window.location.href='nuevoProyecto.html'" 
+          class="px-2 py-1 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition">
+          Agregar
+        </button>
       </div>
     </header>
 
-    <!-- Contenido principal -->
+    <!-- FILTROS DE BÚSQUEDA -->
+    <div class="flex flex-col sm:flex-row gap-3 mt-6 mb-6 justify-center sm:justify-between items-center px-4">
+      <!-- Barra de búsqueda -->
+      <input 
+        id="buscarProyecto"
+        type="text" 
+        placeholder="Buscar por nombre del proyecto..." 
+        class="w-full sm:w-1/2 border border-[#161a7e]/40 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+      >
+
+      <!-- Lista desplegable -->
+      <select 
+        id="estadoProyecto" 
+        class="w-full sm:w-1/3 border border-[#161a7e]/40 rounded-lg px-3 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+      >
+        <option value="">Todos los estados</option>
+        <option value="planificacion">En planificación</option>
+        <option value="progreso">En progreso</option>
+        <option value="pausa">En pausa</option>
+        <option value="finalizado">Finalizado</option>
+      </select>
+    </div>
+
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="flex-1 p-2">
       <div class="border-[3px] border-[#161a7e] rounded-xl bg-white/60 backdrop-blur-md p-2 shadow-md">
+
+        <!-- Encabezado del módulo -->
         <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
           <div>
-            <h2 class="text-2xl font-semibold text-gray-800">Proyectos Activos</h2>
+            <h2 class="text-lg font-semibold text-gray-800">Proyectos Activos</h2>
             <p class="text-gray-600">Gestión y seguimiento de proyectos en curso</p>
           </div>
           <div class="flex flex-wrap gap-3 mt-4 md:mt-0 items-center justify-center">
-            <button class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition">Actualizar</button>
-            <button class="px-4 py-2 bg-gray-600 text-white rounded-md hover:bg-gray-700 transition">Exportar</button>
+            <button class="px-2 py-1 bg-red-600 text-white rounded-md hover:bg-red-700 transition">Actualizar</button>
+            <button class="px-2 py-1 bg-gray-600 text-white rounded-md hover:bg-gray-700 transition">Exportar</button>
           </div>
         </div>
 
-        <!-- Filtros -->
-        <div class="bg-white/70 border border-[#161a7e] rounded-lg p-4 mb-6 backdrop-blur-md">
-          <div class="flex flex-wrap gap-4 justify-evenly">
-            <input type="text" placeholder="Buscar proyecto..." class="flex-1 px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
-            <select class="px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
-              <option>Todos los estados</option>
-              <option>En planificación</option>
-              <option>En progreso</option>
-              <option>En pausa</option>
-              <option>Finalizado</option>
-            </select>
-            <select class="px-3 py-2 border border-[#161a7e] rounded-lg bg-[#f0f4ff] focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
-              <option>Todos los clientes</option>
-              <option>Cliente A</option>
-              <option>Cliente B</option>
-            </select>
+        <!-- TABLA DE PROYECTOS -->
+        <div class="w-full rounded-lg border border-[#161a7e]/30 shadow-md overflow-hidden">
+          <div class="sm:overflow-x-auto">
+            <div class="min-w-full sm:min-w-[1100px] max-w-[95vw] mx-auto">
+
+              <!-- Encabezado -->
+              <div class="hidden sm:grid grid-cols-[0.3fr_1.3fr_1fr_1fr_1.5fr_0.8fr_0.8fr_1fr_0.8fr_1fr_1fr] bg-[#161a7e] text-white font-semibold text-sm rounded-t-lg text-center sm:text-left">
+                <div class="py-2 px-2">Id</div>
+                <div class="py-2 px-2">Proyecto</div>
+                <div class="py-2 px-2">Cliente</div>
+                <div class="py-2 px-2">Contacto</div>
+                <div class="py-2 px-2">Correo</div>
+                <div class="py-2 px-2">Inicio</div>
+                <div class="py-2 px-2">Final (Aprox)</div>
+                <div class="py-2 px-2">Contrato</div>
+                <div class="py-2 px-2">Avances</div>
+                <div class="py-2 px-2">Dirección</div>
+                <div class="py-2 px-2">Acciones</div>
+              </div>
+
+              <!-- Fila -->
+              <div class="divide-y divide-gray-200 bg-white/70 text-sm">
+                <div class="grid grid-cols-1 sm:grid-cols-[0.3fr_1.3fr_1fr_1fr_1.5fr_0.8fr_0.8fr_1fr_0.8fr_1fr_1fr] gap-2 p-3 sm:p-4 sm:text-left items-center hover:bg-white transition">
+
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">ID:</span> 1</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Proyecto:</span> Reforma parque</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Cliente:</span> Juan Bustamante</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Contacto:</span> +57 3216549870</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Correo:</span> juanbusta@gmail.com</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Inicio:</span> 15/10/2025</div>
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Final (Aprox):</span> 15/12/2026</div>
+
+                  <div class="truncate">
+                    <span class="sm:hidden font-semibold text-[#161a7e]">Contrato:</span>
+                    <a href="#" class="text-blue-600 underline whitespace-nowrap">Ver Documento</a>
+                  </div>
+
+                  <div class="truncate"><span class="sm:hidden font-semibold text-[#161a7e]">Evidencias:</span> 4</div>
+
+                  <!-- Dirección -->
+                  <div class="truncate">
+                    <span class="sm:hidden font-semibold text-[#161a7e]">Dirección:</span>
+                    <a href="#" onclick="mostrarMapa('Parque principal Sopetrán, Antioquia')" class="text-blue-600 underline whitespace-nowrap">
+                      Ver lugar
+                    </a>
+                  </div>
+
+                  <!-- Acciones -->
+                  <div class="flex flex-row sm:flex-col justify-center sm:justify-start gap-2 w-full sm:w-auto">
+                    <button 
+                      class="w-full sm:w-[120px] px-3 py-1 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition text-xs sm:text-sm text-center">
+                      Editar
+                    </button>
+                    <button 
+                      onclick="window.location.href='progresoObra.html'" 
+                      class="w-full sm:w-[120px] px-3 py-1 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition text-xs sm:text-sm text-center">
+                      Evidencias
+                    </button>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
 
-    <!-- Tabla de proyectos -->
-    <div class="overflow-x-auto rounded-lg border border-[#161a7e]/30 shadow-md">
-    <div class="min-w-[900px] grid grid-cols-12 gap-4 p-4 bg-[#161a7e]/10 font-medium text-gray-800 border-b">
-        <div class="col-span-3">Nombre del Proyecto</div>
-        <div class="col-span-2">Cliente</div>
-        <div class="col-span-2">Inicio</div>
-        <div class="col-span-2">Final (Aprox)</div>
-        <div class="col-span-1 text-center">Avances</div>
-        <div class="col-span-2 text-center">Acciones</div>
-    </div>
+      </div>
+    </main>
+  </div>
 
-    <div class="divide-y divide-gray-200 bg-white/60 backdrop-blur-md">
-        <div class="min-w-[900px] grid grid-cols-12 gap-4 p-4 items-center hover:bg-white transition-colors duration-200">
-        <div class="col-span-3 font-medium">Casa Residencial Las Lomas</div>
-        <div class="col-span-2">Juan Pérez</div>
-        <div class="col-span-2">15/10/2025</div>
-        <div class="col-span-2">15/12/2026</div>
-        <div class="col-span-1 text-center">5</div> <!-- Cantidad de avances -->
-        <div class="col-span-2 flex justify-center gap-2 flex-wrap">
-            <button title="Editar" class="px-3 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition text-sm">Editar</button>
-            <button title="Avance" onclick="window.location.href='progresoObra.html'" class="px-3 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition text-sm">Evidencias</button>
-        </div>
-        </div>
+  <!-- MODAL MAPA -->
+  <div id="mapaModal" class="hidden fixed inset-0 bg-black/70 backdrop-blur-sm flex items-center justify-center z-50 overflow-auto">
+    <div class="bg-white rounded-2xl shadow-xl w-[95%] md:w-[80%] lg:w-[70%] xl:w-[60%] p-4 relative mx-auto my-auto">
+      <button 
+        onclick="cerrarMapa()" 
+        class="absolute top-2 right-3 bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded-lg text-sm">
+        X
+      </button>
+      <iframe 
+        id="mapaFrame" 
+        class="w-full min-h-[400px] md:min-h-[500px] rounded-lg" 
+        style="border:0;" 
+        allowfullscreen 
+        loading="lazy">
+      </iframe>
+      <div class="text-center mt-3">
+        <a 
+          id="verEnGoogleMaps" 
+          href="#" 
+          target="_blank" 
+          class="inline-block px-4 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition">
+          Ver en Google Maps
+        </a>
+      </div>
     </div>
-    </div>
-
-    </div>
-</main>
-
-  <script src="../Scripts/main.js"></script>
+  </div>
 </body>
+
+    <script>
+      function mostrarMapa(direccion) {
+        const mapaModal = document.getElementById('mapaModal');
+        const mapaFrame = document.getElementById('mapaFrame');
+        const enlace = document.getElementById('verEnGoogleMaps');
+
+        const direccionCodificada = encodeURIComponent(direccion);
+        const url = `https://www.google.com/maps?q=${direccionCodificada}&output=embed`;
+        const enlaceMaps = `https://www.google.com/maps/dir/?api=1&destination=${direccionCodificada}`;
+
+        mapaFrame.src = url;
+        enlace.href = enlaceMaps;
+
+        mapaModal.classList.remove('hidden');
+      }
+
+      function cerrarMapa() {
+        document.getElementById('mapaModal').classList.add('hidden');
+        document.getElementById('mapaFrame').src = "";
+      }
+    </script>
+
+    <script src="../Scripts/main.js"></script>
+  </body>
 </html>
