--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -23,8 +23,8 @@
 
     <!-- ENCABEZADO -->
     <header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm flex justify-between items-center">
-      <h1 class="text-xl font-semibold text-gray-800">Gestión Proyectos</h1>
-      <div class="flex gap-3">
+      <h1 class="text-xl font-semibold text-gray-700">Gestión Proyectos</h1>
+      <div class="flex gap-2">
         <button 
           onclick="window.location.href='../index.html'" 
           class="px-2 py-1 bg-yellow-500 text-white rounded-md hover:bg-yellow-600 transition">
@@ -71,7 +71,7 @@
             <h2 class="text-lg font-semibold text-gray-800">Proyectos Activos</h2>
             <p class="text-gray-600">Gestión y seguimiento de proyectos en curso</p>
           </div>
-          <div class="flex flex-wrap gap-3 mt-4 md:mt-0 items-center justify-center">
+          <div class="flex flex-wrap gap-2 mt-4 md:mt-0 items-center justify-center">
             <button class="px-2 py-1 bg-red-600 text-white rounded-md hover:bg-red-700 transition">Actualizar</button>
             <button class="px-2 py-1 bg-gray-600 text-white rounded-md hover:bg-gray-700 transition">Exportar</button>
           </div>
@@ -125,14 +125,14 @@
                   </div>
 
                   <!-- Acciones -->
-                  <div class="flex flex-row sm:flex-col justify-center sm:justify-start gap-2 w-full sm:w-auto">
+                  <div class="flex flex-row sm:flex-col justify-center sm:justify-start gap-2 w-full sm:w-auto mt-3 sm:mt-0">
                     <button 
-                      class="w-full sm:w-[120px] px-3 py-1 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition text-xs sm:text-sm text-center">
+                      class="w-full sm:w-[120px] px-3 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition text-xs sm:text-sm text-center">
                       Editar
                     </button>
                     <button 
                       onclick="window.location.href='progresoObra.html'" 
-                      class="w-full sm:w-[120px] px-3 py-1 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition text-xs sm:text-sm text-center">
+                      class="w-full sm:w-[120px] px-3 py-2 bg-[#161a7e] text-white rounded-md hover:bg-[#0f1368] transition text-xs sm:text-sm text-center">
                       Evidencias
                     </button>
                   </div>
