Disminucion de gap

--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -30,9 +30,7 @@
       <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
         <div class="flex items-center justify-between px-3 py-3">
           <h1 class="text-xl font-semibold text-gray-800">Modificar Proyecto Existente</h1>
-          <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
-            🏠 Inicio
-          </button>
+          <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
         </div>
       </header>
 
