--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -49,8 +49,8 @@
         <div class="flex items-center justify-between px-2 py-3">
           <h1 class="text-3xl font-semibold text-gray-800">Portafolio</h1>
           <div class="flex gap-2">
-            <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">🏠 Inicio</button>
-            <button id="addProjectBtn" onclick="window.location.href='crear_portafolio.html'" class="hidden px-3 py-1 bg-blue-700 text-white rounded-lg text-sm hover:bg-blue-800 transition duration-200">➕ Agregar Proyecto</button>
+            <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
+            <button id="addProjectBtn" onclick="window.location.href='crear_portafolio.html'" class="hidden px-3 py-1 bg-blue-700 text-white rounded-lg text-sm hover:bg-blue-800 transition duration-200">Agregar</button>
           </div>
         </div>
       </header>
