--- a/Paginas/blogs.html
+++ b/Paginas/blogs.html
@@ -30,7 +30,7 @@
             <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Blogs de JB Constructores</h1>
-                    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Volver al inicio</button>
+                    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
                 </div>
             </header>
             
