--- a/Paginas/progresoObra.html
+++ b/Paginas/progresoObra.html
@@ -152,7 +152,7 @@
 
     </form>
 
-    <!-- 🟩 Sección de videos publicados -->
+    <!-- Sección de videos publicados -->
     <section class="mt-10">
       <h3 class="text-xl font-semibold mb-4 text-gray-800 border-b border-[#161a7e] pb-2 text-center">
         Avances Publicados
