--- a/Paginas/resenas.html
+++ b/Paginas/resenas.html
@@ -29,9 +29,7 @@
         <div class="flex items-center justify-between px-6 py-4">
             <h1 class="text-xl font-semibold text-gray-800">Reseñas y Calificaciones</h1>
             <button onclick="window.location.href='../index.html'" 
-                    class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
-                Volver al inicio
-            </button>
+            class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
         </div>
         <div class="h-1 w-full bg-blue-300"></div>
 
