--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -54,10 +54,7 @@
           <h1 class="text-2xl font-semibold text-teal-700">SIMULADOR</h1>
           <button 
             onclick="window.location.href='../index.html'" 
-            class="px-3 py-1 bg-teal-600 text-white rounded-lg text-sm hover:bg-teal-700 transition duration-200"
-          >
-            🏠 Inicio
-          </button>
+            class="px-3 py-1 bg-teal-600 text-white rounded-lg text-sm hover:bg-teal-700 transition duration-200">Inicio</button>
         </div>
       </header>
 
