--- a/Paginas/resenas.html
+++ b/Paginas/resenas.html
@@ -1,88 +1,157 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reseñas y Calificaciones</title>
-    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Roboto', sans-serif; }
-        /* Efecto de enfoque similar al de la página de inicio de sesión */
-        input:focus, textarea:focus, select:focus {
-            outline: none;
-            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
-        }
-        button:focus {
-            outline: none;
-            box-shadow: 0 0 8px rgba(30, 120, 90, 0.5);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de Reseñas</title>
+  <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Roboto', sans-serif; }
+  </style>
 </head>
 
-<!-- Fondo degradado igual al de Iniciar Sesión -->
 <body class="bg-gradient-to-b from-green-100 via-blue-50 to-blue-100 min-h-screen flex flex-col">
 
-    <!-- Encabezado original sin cambios -->
-    <header class="bg-transparent shadow-none">
-        <div class="flex items-center justify-between px-6 py-4">
-            <h1 class="text-xl font-semibold text-gray-800">Reseñas y Calificaciones</h1>
-            <button onclick="window.location.href='../index.html'" 
-            class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
+  <!-- Encabezado -->
+  <header class="bg-transparent shadow-none">
+    <div class="flex items-center justify-between px-6 py-4">
+      <h1 class="text-xl font-semibold text-gray-800">Lista de Reseñas</h1>
+      <button onclick="window.location.href='../index.html'"
+              class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
+    </div>
+    <div class="h-1 w-full bg-blue-300"></div>
+  </header>
+
+  <!-- Contenido principal -->
+  <main class="flex-1 p-6 flex flex-col items-center">
+
+    <!-- Título -->
+    <div class="mb-6 text-center">
+      <h2 class="text-2xl font-semibold text-gray-800">Reseñas Publicadas</h2>
+      <p class="text-gray-600">Conoce las experiencias de otros usuarios.</p>
+    </div>
+
+    <!-- Contenedor de reseñas simuladas (2 columnas en pantallas medianas o grandes) -->
+    <div id="listaResenas" class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-5xl">
+      <!-- Se llenará dinámicamente -->
+    </div>
+
+    <!-- Botón para nueva reseña -->
+    <div class="mt-8">
+      <button onclick="abrirModalResena()"
+              class="bg-green-600 hover:bg-blue-600 text-white py-2 px-4 rounded-xl font-semibold transition transform hover:scale-105">
+        Dejar Nueva Reseña
+      </button>
+    </div>
+  </main>
+
+  <!-- Modal para nueva reseña -->
+  <div id="modalResena" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-2xl shadow-2xl p-6 w-[90%] max-w-lg relative">
+      <button onclick="cerrarModalResena()" class="absolute top-2 right-3 text-red-600 font-bold text-lg">X</button>
+      <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Deja tu Reseña</h3>
+
+      <form id="formResena" onsubmit="return enviarResena(event)" class="space-y-4">
+        <input type="text" id="nombre" placeholder="Tu nombre"
+               class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition" required>
+
+        <select id="calificacion" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition">
+          <option value="5">5 - Excelente</option>
+          <option value="4">4 - Muy Bueno</option>
+          <option value="3">3 - Bueno</option>
+          <option value="2">2 - Regular</option>
+          <option value="1">1 - Malo</option>
+        </select>
+
+        <textarea id="comentario" rows="4" placeholder="Escribe tu comentario aquí..."
+                  class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition" required></textarea>
+
+        <div class="text-center">
+          <button type="submit"
+                  class="bg-green-600 hover:bg-blue-600 text-white py-2 px-4 rounded-xl font-semibold transition transform hover:scale-105">
+            Enviar Reseña
+          </button>
         </div>
-        <div class="h-1 w-full bg-blue-300"></div>
+      </form>
+    </div>
+  </div>
 
-    </header>
+  <!-- Modal de confirmación -->
+  <div id="modalConfirmacion" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-2xl shadow-xl p-6 text-center w-[90%] max-w-md">
+      <h3 id="mensajeModal" class="text-lg font-semibold text-gray-700 mb-4"></h3>
+      <button onclick="cerrarModalConfirmacion()"
+              class="bg-green-600 hover:bg-blue-600 text-white px-4 py-2 rounded-lg transition">Aceptar</button>
+    </div>
+  </div>
 
-    <!-- Contenido centrado -->
-    <main class="flex-1 flex flex-col items-center justify-center p-6">
+  <script>
+    // Simulación de reseñas publicadas
+    const resenas = [
+      { nombre: "Laura Gómez", calificacion: 5, comentario: "Excelente servicio y atención personalizada." },
+      { nombre: "Carlos Ruiz", calificacion: 4, comentario: "Muy buena experiencia, todo salió bien." },
+      { nombre: "Ana Torres", calificacion: 3, comentario: "Hubo algunos retrasos, pero el lugar es bonito." }
+    ];
 
-        <div class="mb-6 text-center">
-            <h2 class="text-2xl font-semibold text-gray-800">Deja tu Reseña</h2>
-            <p class="text-gray-600">Comparte tu experiencia con nosotros.</p>
+    function mostrarResenas() {
+      const contenedor = document.getElementById('listaResenas');
+      contenedor.innerHTML = resenas.map(r => `
+        <div class="bg-white shadow-md rounded-xl p-4 border-l-4 ${r.calificacion >= 4 ? 'border-green-500' : r.calificacion === 3 ? 'border-yellow-400' : 'border-red-500'}">
+          <h4 class="text-lg font-semibold text-gray-800">${r.nombre}</h4>
+          <p class="text-yellow-500 text-sm mb-2">⭐ ${r.calificacion} / 5</p>
+          <p class="text-gray-600">${r.comentario}</p>
         </div>
+      `).join('');
+    }
 
-        <!-- Formulario ajustado -->
-        <form action="#" method="post" autocomplete="off"
-              class="bg-white rounded-3xl shadow-2xl p-8 w-full max-w-lg">
+    mostrarResenas();
 
-            <!-- Nombre -->
-            <div class="mb-5">
-                <input type="text" id="nombre" name="nombre"
-                       class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition"
-                       placeholder="Ingresa tú nombre" required>
-            </div>
+    // Abrir y cerrar modales
+    function abrirModalResena() { document.getElementById('modalResena').classList.remove('hidden'); }
+    function cerrarModalResena() { document.getElementById('modalResena').classList.add('hidden'); }
 
-            <!-- Calificación -->
-            <div class="mb-5">
-                <label class="block text-gray-700 font-medium mb-2" for="calificacion">Calificación</label>
-                <select id="calificacion" name="calificacion"
-                        class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition">
-                    <option value="5">5 - Excelente</option>
-                    <option value="4">4 - Muy Bueno</option>
-                    <option value="3">3 - Bueno</option>
-                    <option value="2">2 - Regular</option>
-                    <option value="1">1 - Malo</option>
-                </select>
-            </div>
+    function cerrarModalConfirmacion() {
+      document.getElementById('modalConfirmacion').classList.add('hidden');
+      cerrarModalResena();
+    }
 
-            <!-- Comentario -->
-            <div class="mb-5">
-                <label class="block text-gray-700 font-medium mb-2" for="comentario">Comentario</label>
-                <textarea id="comentario" name="comentario" rows="4"
-                          class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition"
-                          placeholder="Escribe tu comentario aquí..." required></textarea>
-            </div>
-            <div class="text-center">
-                <button type="submit"
-                        class="bg-green-600 hover:bg-blue-600 text-white py-2 px-4 rounded-xl font-semibold transition transform hover:scale-105">
-                    Enviar Reseña
-                </button>
-            </div>
-        </form>
-    </main>
+    // Envío de reseña con validación inteligente
+    function enviarResena(event) {
+      event.preventDefault();
 
-<script src="../Scripts/main.js"></script>
+      const nombre = document.getElementById('nombre').value.trim();
+      const calificacion = parseInt(document.getElementById('calificacion').value);
+      const comentario = document.getElementById('comentario').value.trim().toLowerCase();
+      const mensajeModal = document.getElementById('mensajeModal');
+
+      // Palabras negativas comunes
+      const palabrasNegativas = ["malo", "pésimo", "demora", "problema", "inconforme", "regular", "queja", "insatisfecho", "reclamo", "fallo", "tarde"];
+      const contieneNegativo = palabrasNegativas.some(p => comentario.includes(p));
+
+      let requiereRevision = false;
+
+      // Condición 1 y 2 → siempre revisión
+      if (calificacion <= 2) {
+        requiereRevision = true;
+      }
+      // Condición 3 a 5 → si hay comentarios negativos, revisión
+      else if (contieneNegativo) {
+        requiereRevision = true;
+      }
+
+      if (!requiereRevision) {
+        resenas.push({ nombre, calificacion, comentario });
+        mostrarResenas();
+        mensajeModal.textContent = "¡Gracias por tu reseña! Se ha publicado exitosamente.";
+      } else {
+        mensajeModal.textContent = "Tu reseña ha sido enviada para verificación por el administrador.";
+      }
+
+      document.getElementById('modalConfirmacion').classList.remove('hidden');
+      document.getElementById('formResena').reset();
+    }
+  </script>
 </body>
 </html>
