gestion proyecto en actualizacion

--- a/Paginas/moderacionResenas.html
+++ b/Paginas/moderacionResenas.html
@@ -17,7 +17,7 @@
     .estado-pendiente { color: #b91c1c; }
   </style>
 </head>
-<body class="bg-gradient-to-b from-green-100 via-blue-50 to-blue-100 min-h-screen flex flex-col">
+<body class="bg-gradient-to-b from-gray-500 via-green-300 to-blue-200 min-h-screen flex flex-col">
 
   <!-- ENCABEZADO FIJO -->
   <header class="fixed top-0 left-0 w-full bg-white/90 backdrop-blur-md shadow-md z-50">
